<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/termsheading"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:text="Introduction" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/intro"
    android:textSize="12dp"
     android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub1"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub1body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub2"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub2body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub3"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub3body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub4"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub4body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub5"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub5body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub6"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub6body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub7"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub8"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub8body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub9"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub9body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub10"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub10body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub11"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub11body"
        android:textSize="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>
   <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub12"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub12body"
        android:textSize="12dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/black"
        android:layout_margin="2dp"/>


</LinearLayout></ScrollView>